[package]
name = "peppi-slp"
version = "0.3.0"
authors = ["melkor <hohav@fastmail.com>"]
edition = "2018"

[dependencies]
arrow = "6.5.0"
atty = "0.2"
clap = "2.33"
env_logger = "0.9"
log = "0.4"
parquet = { version = "6.5.0", default-features = false, features = [
  "arrow",
  "base64",
] }
parquet-format = "4.0"
peppi = "1.0.0-alpha.6"
serde_json = "1.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
incremental = false
rpath = false

[[bin]]
name = "slp"
path = "src/main.rs"
