[package]
name = "peppi-slp"
version = "0.3.2"
authors = ["melkor <hohav@fastmail.com>"]
edition = "2021"

[dependencies]
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2.git", rev = "f75ce4266e04c4084fa5666c6c5ff5efd6b5036f", features = ["io_ipc", "io_ipc_write_async", "io_ipc_compression", "io_print"] }
atty = "0.2"
clap = { version = "3.2", features = ["cargo"] }
env_logger = "0.9"
log = "0.4"
peekread = "0.1"
peppi = { git = "https://github.com/hohav/peppi.git", rev = "961d95beea86b7d2800ee33f1e0d5f60f186454e" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tar = "0.4"
tempfile = "3.3.0"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
incremental = false
rpath = false

[[bin]]
name = "slp"
path = "src/main.rs"
