[package]
name = "peppi-slp"
version = "0.6.0"
authors = ["melkor <hohav@fastmail.com>"]
edition = "2021"

[dependencies]
arrow2 = "0.17"
atty = "0.2"
clap = { version = "4.5", features = ["cargo"] }
env_logger = "0.11"
log = "0.4"
peekread = "0.1"
peppi = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tar = "0.4"
tempfile = "3.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
incremental = false
rpath = false

[[bin]]
name = "slp"
path = "src/main.rs"
